1. Add skipTests in sping-boot:start, spring-boot:stop goal 2. Spilt robotframework:run to robotframework:acceptance-test and robotframework:verfiy to not fail build if failed

--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -51,6 +51,7 @@
                             <goal>stop</goal>
                         </goals>
                         <configuration>
+                            <skip>${skipTests}</skip>
                             <!-- use jacoco generate argLine -->
                             <jvmArguments>${argLine}</jvmArguments>
                         </configuration>
